# nanio

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  s3-compatibility.md  security.md  stateless-scaling.md
src/nanio/: __init__.py  __main__.py  app.py  app_state.py  cli.py  config.py  errors.py  etag.py  install.py  keys.py  logging.py  options.py  xml.py
src/nanio/auth/: __init__.py  chunked.py  credentials.py  middleware.py  sigv4.py
src/nanio/handlers/: __init__.py  _body.py  bucket.py  multipart.py  object.py  routes.py  service.py
src/nanio/storage/: __init__.py  backend.py  filesystem.py  metadata.py  multipart.py  paths.py
tests/: conftest.py
tests/integration/: _uvicorn_fixture.py  test_boto3_wire.py  test_bucket_ops.py  test_copy_delete_presigned.py  test_error_responses.py  test_list_objects.py  test_middleware_asgi.py  test_multipart_asgi.py  test_multipart_boto3.py  test_object_ops.py  test_service.py  test_streaming.py  test_symlink_safety.py  test_xml_dos.py
tests/load/: README.md  _common.py  locustfile_large.py  locustfile_mixed.py  locustfile_small.py
tests/unit/: test_auth_middleware.py  test_chunked.py  test_cli_install.py  test_cli_serve.py  test_config.py  test_coverage_gaps.py  test_coverage_gaps_part2.py  test_coverage_gaps_part3.py  test_credentials.py  test_errors.py  test_etag.py  test_filesystem_storage.py  test_keys.py  test_logging.py  test_metadata.py  test_multipart_storage.py  test_options.py  test_paths.py  test_sigv4.py  test_smoke.py  test_xml.py
