[build-system]
requires = ["uv_build>=0.4.15,<0.20"]
build-backend = "uv_build"

[project]
name = "nanio"
version = "0.1.1"
description = "A minimal, stateless, S3-compatible object storage server. Buckets are folders, objects are files."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Pedro Dias" }]
keywords = ["s3", "object-storage", "minio", "aws", "storage", "asgi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: System :: Archiving",
  "Topic :: System :: Filesystems",
]
dependencies = [
  "starlette>=0.37",
  "uvicorn[standard]>=0.30",
  "aiofiles>=23.2",
  "anyio>=4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-xdist>=3.5",
  "httpx>=0.27",
  "boto3>=1.34",
  "botocore>=1.34",
  "ruff>=0.15",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
loadtest = [
  "locust>=2.25",
]

[project.scripts]
nanio = "nanio.cli:main"

[project.urls]
Homepage = "https://github.com/apocas/nanio"
Issues = "https://github.com/apocas/nanio/issues"
Repository = "https://github.com/apocas/nanio"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "nanio"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/load -q"
markers = [
  "slow: slow tests (e.g. multi-GB streaming)",
  "external_cli: requires the aws or s3cmd binary on PATH",
  "load: load tests (excluded from default run)",
]
filterwarnings = [
  "ignore::DeprecationWarning:botocore.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # allow `assert False` in tests
"src/nanio/_vendor/**/*.py" = ["ALL"]  # vendored code is not ours to lint

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/nanio"]
exclude = ["src/nanio/_vendor/.*"]

[dependency-groups]
dev = [
    "requests>=2.33.1",
]
